minor - alt & title 100%
Finished alt & titles for pictures

--- a/en/gallery.html
+++ b/en/gallery.html
@@ -179,7 +179,7 @@
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/events_images/small/gallery-03.jpg" width="450" height="600" loading="lazy"
                   alt="Students having fun in Street Fighter 3rd Strike Lahti Fisticuffs Tournament in the LAB University of Applied Sciences. Organized by Lahti FGC"
-                  title="Fun times"
+                  title="Hugo player"
                     class="img-cover">
                 </figure>
               </div>
@@ -291,7 +291,7 @@
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/events_images/small/gallery-10.jpg" width="450" height="600" loading="lazy"
                   alt="More Super Street Fighter 2 Turbo Lahti Fisticuffs Tournament in the LAB University of Applied Sciences. Organized by Lahti FGC"
-                  title="SF2ST"
+                  title="Super Street Fighter 2 Turbo"
                     class="img-cover">
                 </figure>
 
@@ -423,7 +423,7 @@
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/events_images/small/gallery-18.jpg" width="450" height="600" loading="lazy"
                   alt="People of Tekken 3 Lahti Fisticuffs Tournament in the Lahti Science Park. Organized by Lahti FGC"
-                  title="People vibing : 3"
+                  title="People vibing"
                     class="img-cover">
                 </figure>
               </div>
@@ -502,6 +502,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gallery_images/small/gallery-01.jpg" width="450" height="600" loading="lazy"
+                  alt="First club session in the LAB University of Applied Sciences, at Kaptam Gamers video games club"
+                  title="First session"
                     class="img-cover">
                 </figure>
 
@@ -543,6 +545,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gallery_images/small/gallery-04.jpg" width="450" height="600" loading="lazy"
+                  alt="Some COD: BOPS 3 & SF3 in the Lahti Science Park, at Kaptam Gamers video games club"
+                  title="COD: BOPS 3 & SF3"
                     class="img-cover">
                 </figure>
 
@@ -569,6 +573,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gallery_images/small/gallery-06.jpg" width="450" height="600" loading="lazy"
+                  alt="Jackbox Party Pack 6 in the LAB University of Applied Sciences, at Kaptam Gamers video games club"
+                  title="Trivia Murder Party 2"
                     class="img-cover">
                 </figure>
               </div>
@@ -582,6 +588,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gallery_images/small/gallery-07.jpg" width="450" height="600" loading="lazy"
+                  alt="Need For Speed: The Run in the Lahti Science Park, at Kaptam Gamers video games club"
+                  title="NFS: The Run"
                     class="img-cover">
                 </figure>
 
@@ -637,6 +645,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gallery_images/small/gallery-10.jpg" width="450" height="600" loading="lazy"
+                  alt="First club session in the LAB University of Applied Sciences, at Kaptam Gamers board games club"
+                  title="First session"
                     class="img-cover">
                 </figure>
 
@@ -663,6 +673,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gallery_images/small/gallery-12.jpg" width="450" height="600" loading="lazy"
+                    alt="Intense Abalone in the LAB University of Applied Sciences Lahti campus, at Kaptam Gamers board games club"
+                    title="Abalone"
                     class="img-cover">
                 </figure>
               </div>
@@ -690,6 +702,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gallery_images/small/gallery-14.jpg" width="450" height="600" loading="lazy"
+                  alt="Jenga in the LAB University of Applied Sciences Lahti campus, at Kaptam Gamers board games club"
+                  title="''Lahden Talot''"
                     class="img-cover">
                 </figure>
 
