--- a/en/lahtifgc_eng.html
+++ b/en/lahtifgc_eng.html
@@ -514,7 +514,7 @@
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/lahti_fgc_images/small/gallery-03.jpg" width="450" height="600" loading="lazy"
                   alt="General vibe of Lahti FGC weekly at the Puolenkuun Pelit"
-                  title="Cookin"
+                  title="Cookin with the Bros"
                     class="img-cover">
                 </figure>
               </div>
