--- a/fi/galleria.html
+++ b/fi/galleria.html
@@ -184,7 +184,7 @@
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/events_images/small/gallery-03.jpg" width="450" height="600" loading="lazy"
                   alt="Opiskelijat pitävät hauskaa Street Fighter 3rd Strike Lahti Fisticuffs Turnauksessa LAB-Ammattikorkeakoululla. Lahti FGC järjestämä"
-                  title="Hyviä aikoja"
+                  title="Hugo:n pelaaja"
                     class="img-cover">
                 </figure>
               </div>
@@ -255,7 +255,7 @@
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/events_images/small/gallery-07.jpg" width="450" height="600" loading="lazy"
                   alt="Super Street Fighter 2 Turbo Lahti Fisticuffs Turnauksessa LAB-Ammattikorkeakoululla. Lahti FGC järjestämä"
-                  title="SF2ST turnauksessa"
+                  title="SF2ST turnauksesta"
                     class="img-cover">
                 </figure>
 
@@ -300,7 +300,7 @@
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/events_images/small/gallery-10.jpg" width="450" height="600" loading="lazy"
                   alt="Enemmän Super Street Fighter 2 Turbo Lahti Fisticuffs Turnausta LAB-Ammattikorkeakoululla. Lahti FGC järjestämä"
-                  title="SF2ST"
+                  title="Super Street Fighter 2 Turbo"
                     class="img-cover">
                 </figure>
 
@@ -522,6 +522,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gallery_images/small/gallery-01.jpg" width="450" height="600" loading="lazy"
+                  alt="Ensimmäinen klubi sessio LAB-Ammattikorkeakoululla, Kaptam Gamers videopeliklubilla"
+                  title="Ensimmäinen sessio"
                     class="img-cover">
                 </figure>
 
@@ -563,6 +565,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gallery_images/small/gallery-04.jpg" width="450" height="600" loading="lazy"
+                  alt="COD: BOPS 3 ja SF3 pelaamista Lahden tiedepuistossa, Kaptam Gamers videopeliklubilla"
+                  title="COD: BOPS 3 & SF3"
                     class="img-cover">
                 </figure>
 
@@ -589,6 +593,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gallery_images/small/gallery-06.jpg" width="450" height="600" loading="lazy"
+                  alt="Jackbox Party Pack 6 kännykkä & TV peli LAB-Ammattikorkeakoululla, Kaptam Gamers videopeliklubilla"
+                  title="Trivia Murder Party 2"
                     class="img-cover">
                 </figure>
               </div>
@@ -602,6 +608,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gallery_images/small/gallery-07.jpg" width="450" height="600" loading="lazy"
+                  alt="Need For Speed: The Run pelaamista Lahden tiedepuistossa, Kaptam Gamers videopeliklubilla"
+                  title="NFS: The Run"
                     class="img-cover">
                 </figure>
 
@@ -657,6 +665,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gallery_images/small/gallery-10.jpg" width="450" height="600" loading="lazy"
+                  alt="Ensimmäinen klubi sessio LAB-Ammattikorkeakoululla, Kaptam Gamers lautapeliklubilla"
+                  title="Ensimmäinen sessio"
                     class="img-cover">
                 </figure>
 
@@ -683,6 +693,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gallery_images/small/gallery-12.jpg" width="450" height="600" loading="lazy"
+                  alt="Yllättävän suosittu Abalone matsi LAB-Ammattikorkeakoululla, Kaptam Gamers videopeliklubilla"
+                  title="Abalone"
                     class="img-cover">
                 </figure>
               </div>
@@ -710,6 +722,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gallery_images/small/gallery-14.jpg" width="450" height="600" loading="lazy"
+                  alt="Jenga in the LAB University of Applied Sciences Lahti campus, at Kaptam Gamers board games club"
+                  title="Wat?"
                     class="img-cover">
                 </figure>
 
