--- a/en/gallery.html
+++ b/en/gallery.html
@@ -703,7 +703,7 @@
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gallery_images/small/gallery-14.jpg" width="450" height="600" loading="lazy"
                   alt="Jenga in the LAB University of Applied Sciences Lahti campus, at Kaptam Gamers board games club"
-                  title="''Lahden Talot''"
+                  title="Wat?"
                     class="img-cover">
                 </figure>
 
