Making video games & board games "on pause"

--- a/en/boardgames.html
+++ b/en/boardgames.html
@@ -130,10 +130,10 @@
             <p class="hero-subtitle">BoardGamesKerho</p>
 
             <h1 class="h1 hero-title">
-              LUT/LAB Lahti's<span class="span">Board Games</span> Hub
+              LUT/LAB Lahti's <span class="span">Board Games</span> Hub
             </h1>
-            <p class="hero-text"> <span style="color:red; font-size:24px; font-weight: bold; margin-bottom:-43px">
-            We will resume weekly activity on Monday, 01.09.2025.
+            <p class="hero-text"> <span style="color:#03b1fc; font-size:50px; font-weight: bold; margin-bottom:-43px">
+            Activity is on pause.
             </span>
             <p class="hero-text"> <span>
               Board games evening is hosted Mondays 16:00 - 20:30 at Mukkulankatu campus at the A247 second floor cafe, near the stairs.
