--- a/en/home.html
+++ b/en/home.html
@@ -120,17 +120,24 @@
           - #Introduction
         -->
 	
-	         <section class="latest-game" id="video" aria-label="clubs">
+	        <section class="section latest-game" id="video" aria-label="clubs">
 
-          <div class="container">
+            <div class="container">
 
-			<div class="responsive-iframe">
-           <iframe width="660" height="371" src="https://www.youtube.com/embed/MmKnnqnClRw" title="Kaptam Gamers" 
-		   frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-		   referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-		   </iframe>
-			</div>
-          </div>
+			        <div class="responsive-iframe" style="margin-top:50px">
+                <iframe width="660" height="371" src="https://www.youtube.com/embed/-FaN54GdRrw" title="Kaptam Gamers" 
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                </iframe>
+			        </div>
+
+              <div class="responsive-iframe" style="margin-top:450px">
+                <iframe width="660" height="371" src="https://www.youtube.com/embed/WJlCF9yEHH8" title="Kaptam Gamers" 
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                </iframe>
+			        </div>
+            </div>
 
 		</section>
 
@@ -174,7 +181,7 @@
 
             <ul class="has-scrollbar">
               <li class="scrollbar-item">
-                <div class="latest-game-card">
+                <div class="latest-game-card2">
                   <a href="./boardgames.html">
                   <figure class="card-banner img-holder" style="--width: 400; --height: 470;">
                     <img src="../assets/images/tabletop.jpg" width="400" height="470" loading="lazy"
@@ -183,7 +190,7 @@
 
                   <div class="card-content">
 
-                    <div class="card-badge skewBg">Mondays @ 16:00 <br><span style="color:blue">Starting 1.9.2025</span></div>
+                    <div class="card-badge skewBg"><span style="color:blue; font-size:2rem">On pause</span></div>
 
                     <h3 class="h3">
                       <div class="card-title">BoardGamesKerho <br><br><span class="span">Board Games Club</span></div>
@@ -194,7 +201,7 @@
                 </div>
               </li>
               <li class="scrollbar-item">
-                <div class="latest-game-card">
+                <div class="latest-game-card2">
                   <a href="videogames.html">
                   <figure class="card-banner img-holder" style="--width: 400; --height: 470;">
                     <img src="../assets/images/gaming.jpg" width="400" height="470" loading="lazy"
@@ -203,7 +210,7 @@
 
                   <div class="card-content">
 
-                    <div class="card-badge skewBg">Fridays @ 16:00 <br><span style="color:blue">Starting 5.9.2025</span></div>
+                    <div class="card-badge skewBg"><span style="color:blue; font-size:2rem">On pause</span></div>
 
                     <h3 class="h3">
                       <div class="card-title">VideoGamesKerho<br><br><span class="span">Video Games Club</span></div>
