--- a/en/videogames.html
+++ b/en/videogames.html
@@ -133,17 +133,14 @@
             <h1 class="h1 hero-title">
               Lahti's <span class="span">Video Games</span> Hub
             </h1>
-            <p class="hero-text"> <span style="color:red; font-size:24px; font-weight: bold; margin-bottom:-40px">
-            We will resume weekly activity on Friday, 05.09.2025.
+            <p class="hero-text"> <span style="color:#03b1fc; font-size:50px; font-weight: bold; margin-bottom:-40px">
+            Activity is on pause.
             </span>
             <p class="hero-text"><span>
               Video games evening is hosted fridays from 16:00 - 20:30 at Niemenkatu 73 lobby. Up to 50 people per evening.
 			  <br>
 			  <br>
-			  8 PC's, 2 PS4, 2 PS3, 40 controllers, racing wheel, jackbox party pack.
-			  <br>
-			  <br>
-			  In addition, we are organizing a monthly fighting game tournament.
+			  8 PC's, 2 PS4, 2 PS3, 40 controllers, racing wheel, jackbox party pack, 6 pcs of "keyboard, mouse, mousepad, headphones" and 6 PC's that are good enough for CS2 and Fortnite. 
             </span></p>
 
       </section>
