--- a/fi/index.html
+++ b/fi/index.html
@@ -131,8 +131,15 @@
 
             <div class="container">
 
-			        <div class="responsive-iframe">
-                <iframe width="660" height="371" src="https://www.youtube.com/embed/MmKnnqnClRw" title="Kaptam Gamers" 
+			        <div class="responsive-iframe" style="margin-top:50px">
+                <iframe width="660" height="371" src="https://www.youtube.com/embed/-FaN54GdRrw" title="Kaptam Gamers" 
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                </iframe>
+			        </div>
+
+              <div class="responsive-iframe" style="margin-top:450px">
+                <iframe width="660" height="371" src="https://www.youtube.com/embed/WJlCF9yEHH8" title="Kaptam Gamers" 
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
                 </iframe>
@@ -189,7 +196,7 @@
 
                   <div class="card-content">
 
-                    <div class="card-badge skewBg">Maanantaina @ 16:00 <br><span style="color:blue">1.9.2025 alkaen</span></div>
+                    <div class="card-badge skewBg"><span style="color:blue; font-size:2rem">Tauolla</span></div>
 
                     <h3 class="h3">
                       <div class="card-title">BoardGamesKerho <br><br><span class="span">Lautapelikerho</span></div>
@@ -209,7 +216,7 @@
 
                   <div class="card-content">
 
-                    <div class="card-badge skewBg">Perjantaina @ 16:00 <br><span style="color:blue">5.9.2025 alkaen</span></div>
+                    <div class="card-badge skewBg"><span style="color:blue; font-size:2rem">Tauolla</span></div>
 
                     <h3 class="h3">
                       <div class="card-title">VideoGamesKerho<br><br><span class="span">Videopelikerho</span></div>
