--- a/fi/lautapeli.html
+++ b/fi/lautapeli.html
@@ -133,8 +133,8 @@
             <h1 class="h1 hero-title">
               LUT/LAB Lahden <span class="span">Lautapeli</span> Keskus
             </h1>
-            <p class="hero-text"> <span style="color:red; font-size:24px; font-weight: bold; margin-bottom:-43px">
-            Jatkamme toimintaa 1.9.2025 Maanantaina.
+            <p class="hero-text"> <span style="color:#03b1fc; font-size:50px; font-weight: bold; margin-bottom:-43px">
+            Toiminta on tauolla.
             </span>
             <p class="hero-text"> <span>
               Lautapeli-ilta järjestetään maanantaina klo 16:00-20:00 Mukkulankadun kampuksella A247 toisen kerroksen kahvilassa, portaiden läheisyydessä.
