--- a/fi/videopeli.html
+++ b/fi/videopeli.html
@@ -133,17 +133,14 @@
             <h1 class="h1 hero-title">
               Lahden <span class="span">Videopeli</span> Keskus
             </h1>
-            <p class="hero-text"> <span style="color:red; font-size:24px; font-weight: bold; margin-bottom:-40px">
-            Jatkamme toimintaa 5.9.2025 Perjantaina.
+             <p class="hero-text"> <span style="color:#03b1fc; font-size:50px; font-weight: bold; margin-bottom:-40px">
+            Toiminta on tauolla.
             </span>
             <p class="hero-text"><span>
               Videopeli-ilta järjestetään perjantaisin klo 16:00-20:00 Niemenkatu 73 aulassa. Meillä on videopelejä & laitteistoa 50 henkilölle.
 			  <br>
 			  <br>
-			  8 Pöytäkonetta, 2 PS4, 2 PS3, 40 ohjainta, rattiohjain, jackbox party pack.
-			  <br>
-			  <br>
-			  Tämän lisäksi, järjestämme kuukausittaiset taistelupeli turnaukset.
+			  8 Pöytäkonetta, 2 PS4, 2 PS3, 40 ohjainta, rattiohjain, jackbox party pack, 6 kpl "näppäimistö, hiiri, kuuloke, hiirimatto", ja 6 pöytäkonetta, jotka ovat tarpeeksi CS2 & Fortnite pelaamiseen.
             </span></p>
 
         <br>  
