--- a/fi/index.html
+++ b/fi/index.html
@@ -187,7 +187,7 @@
 
             <ul class="has-scrollbar">
               <li class="scrollbar-item">
-                <div class="latest-game-card">
+                <div class="latest-game-card2">
                   <a href="./lautapeli.html">
                   <figure class="card-banner img-holder" style="--width: 400; --height: 470;">
                     <img src="../assets/images/tabletop.jpg" width="400" height="470" loading="lazy"
@@ -207,7 +207,7 @@
                 </div>
               </li>
               <li class="scrollbar-item">
-                <div class="latest-game-card">
+                <div class="latest-game-card2">
                   <a href="videopeli.html">
                   <figure class="card-banner img-holder" style="--width: 400; --height: 470;">
                     <img src="../assets/images/gaming.jpg" width="400" height="470" loading="lazy"
