Top bar colour change

--- a/fi/info.html
+++ b/fi/info.html
@@ -60,15 +60,15 @@
             </li>
 			
             <li class="navbar-item">
-                  <a href="lautapeli.html" class="navbar-link skewBg" data-nav-link>Lautapelikerho</a>
+                  <a href="lautapeli.html" class="navbar-link skewBg2" data-nav-link>Lautapelikerho</a>
                   </li>
-            
+                  
             <li class="navbar-item">
-                  <a href="videopeli.html" class="navbar-link skewBg" data-nav-link>Videopelikerho</a>
+                  <a href="videopeli.html" class="navbar-link skewBg2" data-nav-link>Videopelikerho</a>
                   </li>
 
             <li class="navbar-item">
-                  <a href="lahtifgc.html" class="navbar-link skewBg2" data-nav-link>Lahti FGC</a>
+                  <a href="lahtifgc.html" class="navbar-link skewBg" data-nav-link>Lahti FGC</a>
                   </li>
             <!--
             <li class="navbar-item">
