--- a/fi/lahtifgc.html
+++ b/fi/lahtifgc.html
@@ -60,11 +60,11 @@
             </li>
 
             <li class="navbar-item">
-                  <a href="lautapeli.html" class="navbar-link skewBg" data-nav-link>Lautapelikerho</a>
+                  <a href="lautapeli.html" class="navbar-link skewBg2" data-nav-link>Lautapelikerho</a>
                   </li>
                   
             <li class="navbar-item">
-                  <a href="videopeli.html" class="navbar-link skewBg" data-nav-link>Videopelikerho</a>
+                  <a href="videopeli.html" class="navbar-link skewBg2" data-nav-link>Videopelikerho</a>
                   </li>
             <!--
             <li class="navbar-item">
