--- a/en/gallery.html
+++ b/en/gallery.html
@@ -58,15 +58,15 @@
             </li>
 			
 			      <li class="navbar-item">
-            <a href="boardgames.html" class="navbar-link skewBg" data-nav-link>Board games club</a>
+            <a href="boardgames.html" class="navbar-link skewBg2" data-nav-link>Board games club</a>
             </li>
 
 			      <li class="navbar-item">
-            <a href="videogames.html" class="navbar-link skewBg" data-nav-link>Video games club</a>
+            <a href="videogames.html" class="navbar-link skewBg2" data-nav-link>Video games club</a>
             </li>
 
             <li class="navbar-item">
-                  <a href="lahtifgc_eng.html" class="navbar-link skewBg2" data-nav-link>Lahti FGC</a>
+                  <a href="lahtifgc_eng.html" class="navbar-link skewBg" data-nav-link>Lahti FGC</a>
                   </li>
             <!--
             <li class="navbar-item">
