--- a/en/videogames.html
+++ b/en/videogames.html
@@ -60,11 +60,11 @@
             </li>
 
 			      <li class="navbar-item">
-            <a href="boardgames.html" class="navbar-link skewBg" data-nav-link>Board games club</a>
+            <a href="boardgames.html" class="navbar-link skewBg2" data-nav-link>Board games club</a>
             </li>
 
             <li class="navbar-item">
-                  <a href="lahtifgc_eng.html" class="navbar-link skewBg2" data-nav-link>Lahti FGC</a>
+                  <a href="lahtifgc_eng.html" class="navbar-link skewBg" data-nav-link>Lahti FGC</a>
                   </li>
             <!--
             <li class="navbar-item">
