--- a/fi/lautapeli.html
+++ b/fi/lautapeli.html
@@ -60,11 +60,11 @@
             </li>
 			
             <li class="navbar-item">
-                  <a href="videopeli.html" class="navbar-link skewBg" data-nav-link>Videopelikerho</a>
+                  <a href="videopeli.html" class="navbar-link skewBg2" data-nav-link>Videopelikerho</a>
                   </li>
 
             <li class="navbar-item">
-                  <a href="lahtifgc.html" class="navbar-link skewBg2" data-nav-link>Lahti FGC</a>
+                  <a href="lahtifgc.html" class="navbar-link skewBg" data-nav-link>Lahti FGC</a>
                   </li>
             <!--
             <li class="navbar-item">
