--- a/en/lahtifgc_eng.html
+++ b/en/lahtifgc_eng.html
@@ -134,12 +134,12 @@
             <img src="../assets/images/lahti_fgc_images/logo.png" width="450" height="600" loading="lazy"
                     class="img-cover">
 
-			<h2 class="h2 hero-title-a" style="margin-bottom:0px">
+			<h2 class="h2 hero-title-a2" style="margin-bottom:0px">
               <span class="span" style="color: #00bfd9; margin-top:5px">Sundays </span> <span class="span"> 14:00 - 18:00</span>
               <br>
               Puolenkuun Pelit
             </h2>
-            <p class="hero-text"><span> <a style="margin-top:-10px">
+            <p class="hero-text2"><span> <a style="margin-top:-10px">
              Lahti FGC (fighting game community) gaming evenings contain 5 PC gaming setups, controllers and over 20 different games that anybody
              over 12 can play (most of our games are PEGI 12 age rated). PC setups are offline only.
 			  <br>
@@ -217,11 +217,9 @@
 		
 		<br>
 		<br>
-		<br>
-		<br>
 
 
-		<div class="container" style="margin-bottom:-100px">
+		<div class="container" style="margin-bottom:-100px; margin-top:100px">
 
           <div class="hero-content">
 
@@ -307,6 +305,14 @@
           <br>
           <a href=
           "
+          https://store.steampowered.com/app/678950/DRAGON_BALL_FighterZ/
+          " 
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
+          DRAGON BALL FighterZ
+          </a>
+          <br>
+          <a href=
+          "
           https://store.steampowered.com/app/366240/GAROU_MARK_OF_THE_WOLVES/
           " 
           target="_blank" class="highlight-text" style="margin-bottom:-15px">
@@ -323,10 +329,34 @@
           <br>
           <a href=
           "
+          https://store.steampowered.com/app/348550/GUILTY_GEAR_XX_ACCENT_CORE_PLUS_R/
+          " 
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
+          GUILTY GEAR XX ACCENT CORE PLUS R
+          </a>
+          <br>
+          <a href=
+          "
+          https://store.steampowered.com/app/520440/GUILTY_GEAR_Xrd_REV_2/
+          " 
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
+          GUILTY GEAR Xrd REV 2
+          </a>
+          <br>
+          <a href=
+          "
           https://store.steampowered.com/app/1384160/GUILTY_GEAR_STRIVE/
           " 
           target="_blank" class="highlight-text" style="margin-bottom:-15px">
           Guilty Gear -Strive- (+ DLC)
+          </a>
+          <br>
+          <a href=
+          "
+          https://store.steampowered.com/app/1372110/JoJos_Bizarre_Adventure_AllStar_Battle_R/
+          " 
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
+          JoJo's Bizarre Adventure: All-Star Battle R
           </a>
           <br>
           <a href=
@@ -399,6 +429,14 @@
           " 
           target="_blank" class="highlight-text" style="margin-bottom:-15px">
           Skullgirls 2nd Encore (+ DLC)
+          </a>
+          <br>
+          <a href=
+          "
+          https://store.steampowered.com/app/544750/SOULCALIBUR_VI/
+          " 
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
+          SOULCALIBUR VI
           </a>
           <br>
           <a href=
