--- a/en/about.html
+++ b/en/about.html
@@ -318,11 +318,45 @@
 
         </div>
 
+                <div class="footer-wrapper">
+
+          <div class="social-wrapper">
+
+            <p class="footer-list-title">Lahti FGC</p>
+
+            <ul class="contact-list">
+              <li>
+                <a href="https://chat.whatsapp.com/Ks7Mevd9v0gELKhYcM3qeY" target="_blank" class="social-link-2" style="background-color: #076e54">
+                  <ion-icon name="logo-whatsapp"></ion-icon>
+				  <p>WhatsApp</p>
+                </a>
+              </li>
+
+              <li>
+                <a href="https://discord.gg/Ahac3BYPyp" target="_blank" class="social-link-2" style="background-color: #7289da">
+                  <ion-icon name="logo-discord"></ion-icon>
+				  <p>Discord  <span style="font-size:11px">More chatting</span></p>
+                </a>
+              </li>
+
+              <li>
+                <a href="https://www.instagram.com/lahtifgc" target="_blank" class="social-link-2" style="background-color: #e60073">
+                  <ion-icon name="logo-instagram"></ion-icon>
+				   <p>Instagram</p>
+                </a>
+              </li>
+
+            </ul>
+
+          </div>
+
+        </div>
+
           <div class="footer-wrapper">
 
           <div class="social-wrapper">
 
-			    <p class="footer-list-title">Video games club</p>
+			    <p class="footer-list-title">Videopelikerho</p>
 
             <ul class="contact-list">
 
@@ -350,7 +384,7 @@
 
           <div class="social-wrapper">
 
-            <p class="footer-list-title">Board games club</p>
+            <p class="footer-list-title">Lautapelikerho</p>
 
             <ul class="contact-list">
               <li>
@@ -373,37 +407,6 @@
 
         </div>
 
-        <div class="footer-wrapper">
-
-          <div class="social-wrapper">
-
-            <p class="footer-list-title">Lahti FGC</p>
-
-            <ul class="contact-list">
-              <li>
-                <a href="https://chat.whatsapp.com/Ks7Mevd9v0gELKhYcM3qeY" target="_blank" class="social-link-2" style="background-color: #076e54">
-                  <ion-icon name="logo-whatsapp"></ion-icon>
-				  <p>WhatsApp</p>
-                </a>
-              </li>
-
-              <li>
-                <a href="https://www.instagram.com/lahtifgc" target="_blank" class="social-link-2" style="background-color: #e60073">
-                  <ion-icon name="logo-instagram"></ion-icon>
-				   <p>Instagram</p>
-                </a>
-              </li>
-
-            </ul>
-
-          </div>
-
-        </div>
-
-
-		
-		
-		
       </div>
     </div>
 
