--- a/fi/galleria.html
+++ b/fi/galleria.html
@@ -912,6 +912,40 @@
 
         </div>
 
+                <div class="footer-wrapper">
+
+          <div class="social-wrapper">
+
+            <p class="footer-list-title">Lahti FGC</p>
+
+            <ul class="contact-list">
+              <li>
+                <a href="https://chat.whatsapp.com/Ks7Mevd9v0gELKhYcM3qeY" target="_blank" class="social-link-2" style="background-color: #076e54">
+                  <ion-icon name="logo-whatsapp"></ion-icon>
+				  <p>WhatsApp</p>
+                </a>
+              </li>
+
+              <li>
+                <a href="https://discord.gg/Ahac3BYPyp" target="_blank" class="social-link-2" style="background-color: #7289da">
+                  <ion-icon name="logo-discord"></ion-icon>
+				  <p>Discord  <span style="font-size:11px">More chatting</span></p>
+                </a>
+              </li>
+
+              <li>
+                <a href="https://www.instagram.com/lahtifgc" target="_blank" class="social-link-2" style="background-color: #e60073">
+                  <ion-icon name="logo-instagram"></ion-icon>
+				   <p>Instagram</p>
+                </a>
+              </li>
+
+            </ul>
+
+          </div>
+
+        </div>
+
           <div class="footer-wrapper">
 
           <div class="social-wrapper">
@@ -956,33 +990,6 @@
 
               <li>
                 <a href="https://www.instagram.com/boardgameskerho" target="_blank" class="social-link-2" style="background-color: #e60073">
-                  <ion-icon name="logo-instagram"></ion-icon>
-				   <p>Instagram</p>
-                </a>
-              </li>
-
-            </ul>
-
-          </div>
-
-        </div>
-
-        <div class="footer-wrapper">
-
-          <div class="social-wrapper">
-
-            <p class="footer-list-title">Lahti FGC</p>
-
-            <ul class="contact-list">
-              <li>
-                <a href="https://chat.whatsapp.com/Ks7Mevd9v0gELKhYcM3qeY" target="_blank" class="social-link-2" style="background-color: #076e54">
-                  <ion-icon name="logo-whatsapp"></ion-icon>
-				  <p>WhatsApp</p>
-                </a>
-              </li>
-
-              <li>
-                <a href="https://www.instagram.com/lahtifgc" target="_blank" class="social-link-2" style="background-color: #e60073">
                   <ion-icon name="logo-instagram"></ion-icon>
 				   <p>Instagram</p>
                 </a>
