--- a/en/boardgames.html
+++ b/en/boardgames.html
@@ -133,7 +133,7 @@
               LUT/LAB Lahti's <span class="span">Board Games</span> Hub
             </h1>
             <p class="hero-text"> <span style="color:#03b1fc; font-size:50px; font-weight: bold; margin-bottom:-43px">
-            Activity is on pause.
+            Activity is on pause
             </span>
             <p class="hero-text"> <span>
               Board games evening is hosted Mondays 16:00 - 20:30 at Mukkulankatu campus at the A247 second floor cafe, near the stairs.
@@ -417,11 +417,6 @@
 				  <p>Youtube</p>
                 </a>
 
-              </li>
-                <a href="https://discord.gg/Ahac3BYPyp" target="_blank" class="social-link-2" style="background-color: #7289da">
-                  <ion-icon name="logo-discord"></ion-icon>
-				  <p>Discord</p>
-                </a>
               </li>
 
               <li>
