--- a/fi/lautapeli.html
+++ b/fi/lautapeli.html
@@ -134,7 +134,7 @@
               LUT/LAB Lahden <span class="span">Lautapeli</span> Keskus
             </h1>
             <p class="hero-text"> <span style="color:#03b1fc; font-size:50px; font-weight: bold; margin-bottom:-43px">
-            Toiminta on tauolla.
+            Toiminta on tauolla
             </span>
             <p class="hero-text"> <span>
               Lautapeli-ilta järjestetään maanantaina klo 16:00-20:00 Mukkulankadun kampuksella A247 toisen kerroksen kahvilassa, portaiden läheisyydessä.
@@ -415,12 +415,6 @@
                 <a href="https://youtube.com/@kaptamgamers" target="_blank" class="social-link-2" style="background-color: #fd1d1d">
                   <ion-icon name="logo-youtube"></ion-icon>
 				  <p>Youtube</p>
-                </a>
-
-              </li>
-                <a href="https://discord.gg/Ahac3BYPyp" target="_blank" class="social-link-2" style="background-color: #7289da">
-                  <ion-icon name="logo-discord"></ion-icon>
-				  <p>Discord</p>
                 </a>
               </li>
 
