--- a/en/videogames.html
+++ b/en/videogames.html
@@ -134,7 +134,7 @@
               Lahti's <span class="span">Video Games</span> Hub
             </h1>
             <p class="hero-text"> <span style="color:#03b1fc; font-size:50px; font-weight: bold; margin-bottom:-40px">
-            Activity is on pause.
+            Activity is on pause
             </span>
             <p class="hero-text"><span>
               Video games evening is hosted Fridays from 16:00 - 20:30 at Niemenkatu 73 lobby. Up to 50 people per evening.
@@ -402,12 +402,6 @@
                 <a href="https://youtube.com/@kaptamgamers" target="_blank" class="social-link-2" style="background-color: #fd1d1d">
                   <ion-icon name="logo-youtube"></ion-icon>
 				  <p>Youtube</p>
-                </a>
-
-              </li>
-                <a href="https://discord.gg/Ahac3BYPyp" target="_blank" class="social-link-2" style="background-color: #7289da">
-                  <ion-icon name="logo-discord"></ion-icon>
-				  <p>Discord</p>
                 </a>
               </li>
 
