--- a/fi/lahtifgc.html
+++ b/fi/lahtifgc.html
@@ -132,7 +132,7 @@
                     class="img-cover">
 
 			<h2 class="h2 hero-title-a2" style="margin-bottom:0px">
-              <span class="span" style="color: #00bfd9; margin-top:5px">Sunnuntaisin </span> <span class="span"> 14:00 - 18:00</span>
+              <span class="span" style="color: #00bfd9; margin-top:5px">Sunnuntaisin </span> <span class="span"> 14:00 - 17:30</span>
               <br>
               Puolenkuun Pelit
             </h2>
@@ -294,7 +294,7 @@
             </h1>
 
             <p class="hero-text"> 
-			<span align="left" style="padding-left:25px">
+			<span style="padding-left:25px; text-align:left">
         <a style="margin-bottom:-15px;color:hsl(42, 100%, 65%)">
         Pelien klikkaaminen vie sinut niiden steam sivuille
 </a>
