--- a/en/lahtifgc_eng.html
+++ b/en/lahtifgc_eng.html
@@ -233,7 +233,7 @@
 			  15110 Lahti<br>
 			  From outside, the right side door to the shared gaming space<br>
 			  <a href="https://maps.app.goo.gl/qUe383ugVLD2KeXj9" target="_blank" class="blue_text" style="color: DodgerBlue;"><u>Google Maps</u></a> <br>
-			  The right side door is open on Sunday starting 14:00-18:00 and the gaming space is right after that door.
+			  The right side door is open on Sunday starting 14:00-17:30 and the gaming space is right after that door.
 			</p>
 		  </div>
          </div>   
@@ -631,7 +631,7 @@
             </h1>
 
             <p class="hero-text"> 
-			<span align="left">
+			<span style="text-align:left">
 					25.04.2025 - Street Fighter 3rd Strike
 					<a href="https://challonge.com/bbplr63s" target="_blank" style="color: DodgerBlue;"><u>Results: Challonge</u></a> 
           ~~~
