--- a/fi/lahtifgc.html
+++ b/fi/lahtifgc.html
@@ -229,7 +229,7 @@
 			  15110 Lahti<br>
 			  Ulkopuolelta oikeanpuoleinen ovi yhteiseen pelitilaan<br>
 			  <a href="https://maps.app.goo.gl/qUe383ugVLD2KeXj9" target="_blank" class="blue_text" style="color: DodgerBlue;"><u>Google Maps</u></a> <br>
-			  Oikeanpuoleinen ovi on avoinna sunnuntaisin klo 14.00-18.00 ja pelitila on heti oven jälkeen.
+			  Oikeanpuoleinen ovi on avoinna sunnuntaisin klo 14:00-17:30 ja pelitila on heti oven jälkeen.
       	</p>
 		  </div>
          </div>   
@@ -664,7 +664,7 @@
             </h1>
 
             <p class="hero-text"> 
-			<span align="left">
+			<span style="text-align:left">
 					25.04.2025 - Street Fighter 3rd Strike
 					<a href="https://challonge.com/bbplr63s" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a> 
           ~~~
