--- a/en/gallery.html
+++ b/en/gallery.html
@@ -139,7 +139,7 @@
 			          <h2 class="h2 section-title">
             <span class="span" style="color: #32cd32">Recent Events </span> 
           </h2>
-
+<h2 style="color: #fff; text-align:left; margin-bottom: 10px">Street Fighter 6 Tournament</h2>
 
           <ul class="has-scrollbar">
 
@@ -186,11 +186,12 @@
 
           <br>
           <br>
-          <br>
 
           <!--
           Tournament change
       		-->
+
+<h2 style="color: #fff; text-align:left; margin-bottom: 10px">Street Fighter 3rd Strike Tournament</h2>
 
                     <ul class="has-scrollbar">
 
@@ -285,7 +286,7 @@
           <br>
           <br>
 
-          <br>
+<h2 style="color: #fff; text-align:left; margin-bottom: 10px">Super Street Fighter 2 Turbo Tournament</h2>
 
           <ul class="has-scrollbar">
 
@@ -382,7 +383,7 @@
           <br>
           <br>
 
-          <br> 
+<h2 style="color: #fff; text-align:left; margin-bottom: 10px">LAN Party</h2>
 
           <ul class="has-scrollbar">
 
@@ -434,7 +435,7 @@
           <br>
           <br>
 
-          <br>
+<h2 style="color: #fff; text-align:left; margin-bottom: 10px">Tekken 3 Tournament</h2>
 
           <ul class="has-scrollbar">
 
