--- a/fi/galleria.html
+++ b/fi/galleria.html
@@ -145,6 +145,8 @@
             <span class="span" style="color: marigold"> </span> <span class="span" style="color: #32cd32"> 25.04.2025 </span> 
           </h3>
           -->
+
+          <h2 style="color: #fff; text-align:left; margin-bottom: 10px">Street Fighter 6 Turnaus</h2>
 			      
           <ul class="has-scrollbar">
 
@@ -191,11 +193,12 @@
 
           <br>
           <br>
-          <br>
 
           <!--
           Tournament change
       		-->
+
+<h2 style="color: #fff; text-align:left; margin-bottom: 10px">Street Fighter 3rd Strike Turnaus</h2>
 
                     <ul class="has-scrollbar">
 
@@ -289,12 +292,8 @@
 
           <br>
           <br>
-          <!--
-          <h3 class="h3 section-title3" style="text-align: left;">
-            <span class="span" style="color: marigold"> </span> <span class="span" style="color: #32cd32"> 07.03.2025 </span> 
-          </h3>
-          -->
-          <br>
+
+<h2 style="color: #fff; text-align:left; margin-bottom: 10px">Super Street Fighter 2 Turbo Turnaus</h2>
 
           <ul class="has-scrollbar">
 
@@ -391,13 +390,7 @@
           <br>
           <br>
 
-          <!--
-          <h3 class="h3 section-title3" style="text-align: left;">
-            <span class="span" style="color: marigold"> </span> <span class="span" style="color: #32cd32"> 14-16.02.2025 </span> 
-          </h3>
-          -->
-
-          <br>
+<h2 style="color: #fff; text-align:left; margin-bottom: 10px">Lanit</h2>
 
           <ul class="has-scrollbar">
 
@@ -448,13 +441,7 @@
 
           <br>
           <br>
-          <!--
-          <h3 class="h3 section-title3" style="text-align: left;">
-            <span class="span" style="color: marigold">Tekken 3 </span> <span class="span" style="color: #32cd32"> 31.01.2025 </span> 
-          </h3>
-          -->
-
-          <br>
+<h2 style="color: #fff; text-align:left; margin-bottom: 10px">Tekken 3 Turnaus</h2>
 
           <ul class="has-scrollbar">
 
