--- a/fi/lahtifgc.html
+++ b/fi/lahtifgc.html
@@ -357,7 +357,7 @@
           https://store.steampowered.com/app/2157560/Granblue_Fantasy_Versus_Rising/
           " 
           target="_blank" class="highlight-text" style="margin-bottom:-15px">
-          Granblue Fantasy Versus: Rising (+ DLC)
+          Granblue Fantasy Versus: Rising (+ suurin osa DLC)
           </a>
           <br>
           <a href=
@@ -381,7 +381,7 @@
           https://store.steampowered.com/app/1384160/GUILTY_GEAR_STRIVE/
           " 
           target="_blank" class="highlight-text" style="margin-bottom:-15px">
-          Guilty Gear -Strive- (+ DLC)
+          Guilty Gear -Strive- (+ suurin osa DLC)
           </a>
           <br>
           <a href=
@@ -501,7 +501,7 @@
           https://store.steampowered.com/app/1364780/Street_Fighter_6/
           " 
           target="_blank" class="highlight-text" style="margin-bottom:-15px">
-          Street Fighter 6 (+ DLC)
+          Street Fighter 6 (+ suurin osa DLC)
           </a>
           <br>
           <a href=
