--- a/en/fighting.html
+++ b/en/fighting.html
@@ -138,7 +138,7 @@
             </h1>
 
             <p class="hero-text"><span>
-			Open tournament for new and experienced fighting game players to have fun. In addition, we have many PC setups, where you can play various games with and controller. You don't need to bring anything (other than phone. You'll need that to get inside the event area). Event is also streamed in twitch, in the channel
+			Open tournament for new and experienced fighting game players to have fun. In addition, we have many PC setups, where you can play various games with and controller (including Boomerang Yu, Duck Game and Make Way). You don't need to bring anything (other than phone. You'll need that to get inside the event area). Event is also streamed in twitch, in the channel:
       <a href="https://www.twitch.tv/juusodotexe" target="_blank" style="font-size: 2rem; font-weight:bold;color: DodgerBlue; "><u>Juusodotexe </u></a>
 			<br>
 			Free for anybody over 15 years old to join in.
@@ -326,7 +326,7 @@
 					31.01.2025 - Tekken 3
 					<a href="https://challonge.com/fi/hhspqvmn" target="_blank" style="color: DodgerBlue;"><u>Results: Challonge</u></a> 
           <br>
-					Fighting Game tournament is made with the help of a professional fighting game player, YaBoiSpades
+					Fighting Game tournament is made with the help of professional fighting game players, YaBoiSpades & JuusoDotExe (Tekken player)
 			</span>
 			</p>
 		  </div>
