--- a/en/lahtifgc_eng.html
+++ b/en/lahtifgc_eng.html
@@ -324,7 +324,7 @@
           https://store.steampowered.com/app/2157560/Granblue_Fantasy_Versus_Rising/
           " 
           target="_blank" class="highlight-text" style="margin-bottom:-15px">
-          Granblue Fantasy Versus: Rising (+ DLC)
+          Granblue Fantasy Versus: Rising (+ most of the DLC)
           </a>
           <br>
           <a href=
@@ -348,7 +348,7 @@
           https://store.steampowered.com/app/1384160/GUILTY_GEAR_STRIVE/
           " 
           target="_blank" class="highlight-text" style="margin-bottom:-15px">
-          Guilty Gear -Strive- (+ DLC)
+          Guilty Gear -Strive- (+ most of the DLC)
           </a>
           <br>
           <a href=
@@ -468,7 +468,7 @@
           https://store.steampowered.com/app/1364780/Street_Fighter_6/
           " 
           target="_blank" class="highlight-text" style="margin-bottom:-15px">
-          Street Fighter 6 (+ DLC)
+          Street Fighter 6 (+ most of the DLC)
           </a>
           <br>
           <a href=
