--- a/fi/tappelu.html
+++ b/fi/tappelu.html
@@ -138,7 +138,7 @@
              Ja rentoa pelaamista
             </h1>
             <p class="hero-text"><span>
-			Avoin turnaus, jossa uudet ja kokeneet taistelupelipelaajat voivat pitää hauskaa. Sen lisäksi useita PC setup:eja, jossa voi pelata ohjaimilla monia pelejä. Ei tarvitse tuoda itse mitään mukaan (muuta kuin kännykän, jolla päästä sisään tapahtumaan). Tapahtuma myös streemataa twitchiin kanavalle
+			Avoin turnaus, jossa uudet ja kokeneet taistelupelipelaajat voivat pitää hauskaa. Sen lisäksi useita PC setup:eja, jossa voi pelata ohjaimilla monia pelejä (esim. Boomerang Yu, Duck Game and Make Way). Ei tarvitse tuoda itse mitään mukaan (muuta kuin kännykän, jolla päästä sisään tapahtumaan). Tapahtuma myös streemataa twitchiin kanavalle:
       <a href="https://www.twitch.tv/juusodotexe" target="_blank" style="font-size: 2rem; font-weight:bold;color: DodgerBlue; "><u>Juusodotexe </u></a>
 			
 			<br>
@@ -330,7 +330,7 @@
 					31.01.2025 - Tekken 3
 					<a href="https://challonge.com/fi/hhspqvmn" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a>    
 					<br>
-					Taistelupeli-turnaus on tehty ammattilais taistelupelaajan avustamana, YaBoiSpades
+					Taistelupeli-turnaus on tehty ammattilais taistelupelaajien avustamana, YaBoiSpades & JuusoDotExe (Tekkenisti)
 			</span>
 			</p>
 		  </div>
