--- a/en/lahtifgc_eng.html
+++ b/en/lahtifgc_eng.html
@@ -324,7 +324,7 @@
           https://store.steampowered.com/app/2157560/Granblue_Fantasy_Versus_Rising/
           " 
           target="_blank" class="highlight-text" style="margin-bottom:-15px">
-          Granblue Fantasy Versus: Rising (+ most of the DLC)
+          Granblue Fantasy Versus: Rising (+ DLC)
           </a>
           <br>
           <a href=
@@ -348,7 +348,7 @@
           https://store.steampowered.com/app/1384160/GUILTY_GEAR_STRIVE/
           " 
           target="_blank" class="highlight-text" style="margin-bottom:-15px">
-          Guilty Gear -Strive- (+ most of the DLC)
+          Guilty Gear -Strive- (+ DLC)
           </a>
           <br>
           <a href=
@@ -468,7 +468,7 @@
           https://store.steampowered.com/app/1364780/Street_Fighter_6/
           " 
           target="_blank" class="highlight-text" style="margin-bottom:-15px">
-          Street Fighter 6 (+ most of the DLC)
+          Street Fighter 6 (+ DLC)
           </a>
           <br>
           <a href=
@@ -707,10 +707,14 @@
 			<span style="text-align:left">
 					25.04.2025 - Street Fighter 3rd Strike
 					<a href="https://challonge.com/bbplr63s" target="_blank" style="color: DodgerBlue;"><u>Results: Challonge</u></a> 
+
+          <a href="../assets/pdf/street_fighter_3rd_strike_general_tips_and_info.pdf" target="_blank" style="color: DodgerBlue; margin-top:5px"><u>PDF Guide for SF3RD Strike</u></a> 
           ~~~
           <br>
           07.03.2025 - Super Street Fighter 2 Turbo
-					<a href="https://challonge.com/fi/kaptam2nd" target="_blank" style="color: DodgerBlue;"><u>Results: Challonge</u></a> 
+					<a href="https://challonge.com/fi/kaptam2nd" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a> 
+
+          <a href="../assets/pdf/super_street_fighter_2_turbo_general_tips_and_info.pdf" target="_blank" style="color: DodgerBlue; margin-top:5px"><u>PDF Guide for SF2ST</u></a> 
           ~~~
           <br>
 					31.01.2025 - Tekken 3
