--- a/en/home.html
+++ b/en/home.html
@@ -125,7 +125,7 @@
             <div class="container">
 
 			        <div class="responsive-iframe" style="margin-top:50px">
-                <iframe width="660" height="371" src="https://www.youtube.com/embed/-FaN54GdRrw" title="Kaptam Gamers" 
+                <iframe width="660" height="371" src="https://www.youtube.com/embed/LxIAcyhsRVQ" title="Kaptam Gamers" 
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
                 </iframe>
